player list complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>A-Football-club</title>
 </head>
 <body>
-    <!------------------- header section  ------------------------>
+    <!------------------- header section start  ------------------------>
     <header>
          <div class="header-content">
              <div class="header-title">
@@ -24,5 +24,125 @@
              </div>
          </div>
     </header>
+     <!------------------- header section end  ------------------------>
+
+      <!------------------- main part start  ------------------------>
+     <main>
+          <!------------------- players part start  ------------------------>
+         <div class="all-players">
+             <div class="players">
+                 <div class="player">
+                     <div class="player-photo">
+                          <img src="images/players/player-1.png" alt="photo">
+                     </div>
+                     <div class="player-description">
+                          <h3>Neymar Jr</h3>
+                          <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                     </div>
+                 </div>
+                 <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-2.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Lionel Messi</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-3.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Cristiano Ronaldo</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-4.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Paulo Dybala</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-5.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Mesut Ozil</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-6.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Mauro Icardi</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-7.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Di Maria</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-8.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Kylian Mbappe</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-9.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Mohamed Salah</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-10.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Harry Kane</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-11.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Keniv De Bruyne</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                         <img src="images/players/player-12.png" alt="photo">
+                    </div>
+                    <div class="player-description">
+                         <h3>Philippe Coutinho</h3>
+                         <p>this is one of the player, <br> of my claub you gays alreday<br> know  manney  thinks about this player so if  you ar  desait to hiere this player  contract.</p>
+                    </div>
+                </div>
+             </div>
+         </div>
+               <!------------------- players part end  ------------------------>
+     </main>
+       <!------------------- main part end  ------------------------>
 </body>
 </html> 
