--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                          <button class='team-btn'>Watch now <i class="fas fa-arrow-right"></i></button>
                     </div>
                     <div class="highlight-thumbnail">
-                         <img src="images/match.png" alt="mach">
+                         <img src="https://i.ibb.co/LPDKxxX/match.png" alt="mach">
                     </div>
                </div>
           </section>  
